fixed overflow

--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -21,15 +21,16 @@
   background: $primary-bg-color;
   .tab-content-outer-container{
     max-width: 1140px;
+    height: 100%;
     width: 95%;
     background: $tab-content-bg-color;
     .tab-content-inner-container{
       width: 100%;
-      height: 100%;
+      // height: 100%;
       // margin: 0px 0px 55px 0px;
       padding: 20px 15px;
       background: $tab-content-bg-color;
-      overflow-y: auto;
+      // overflow-y: auto;
       box-shadow: 0px 0px 8px 3px $light-shadow;
     }
   }
